--- a/templates/scores.html
+++ b/templates/scores.html
@@ -11,21 +11,19 @@
 <div class="score-table">
 <ul>
     <p>Attempts</p>
-{% for attempt in attempts %}
-<li>{{attempt}}</li>
-{% endfor %}
+
+<li>{{attempts}}</li>
+
 </ul>
     <ul>
         <p>Names</p>
- {% for name in name %}
 <li>{{name}}</li>
-{% endfor %}
     </ul>
         <ul>
             <p>Dates</p>
-    {% for date in date %}
+
 <li>{{date}}</li>
-{% endfor %}
+
 </ul>
 </div>
 <div class="btn-spacing">
