--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1 class="main-title">Random number game</h1>
   <form method="post" action="/" class="main">
-      <p>Would you like to <span class="new">A)</span> start a <span class="new">new game</span> or <span class="view_scores">B)</span> see <span class="view_scores">your scores?</span></p>
+      <p>Would you like to <span class="new">A)</span> start a <span class="new">new game</span> or <span class="view_scores">B)</span> see <span class="view_scores">total scores?</span></p>
         <input type="text" name="game_choice" placeholder="Insert A or B...">
         <button type="submit" class="btn submit">SUBMIT</button>
     </form>
