--- a/templates/scores.html
+++ b/templates/scores.html
@@ -11,7 +11,7 @@
     {% if name is string %}
     {{name}}
     {% else %}
-    {{name|join(', ') }}{% endif %}, total scores are:</p>
+    {{name|join(', ') }}{% endif %} total scores are:</p>
 <div class="score-table">
 <ul>
     <p>Attempts</p>
