--- a/templates/game.html
+++ b/templates/game.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <h1 class="main-title">Random number game</h1>
-<p>Please insert random number from 0 to 20</p>
+<p>Please insert random number from 0 to 10</p>
 <form method="post" action="/game">
     <input type="text" name="name" placeholder="Insert your name..." value={{name}}>
     <input type="number" name="secret_number" placeholder="Insert a random number...">
     <div class="btn-spacing">
         <button type="submit" class="btn submit">SUBMIT</button>
         <a href="/" class="btn back">Go back to menu</a>
-        <a href="/scores" class="btn see_scores">Scores</a>
+        <a href="/scores" class="btn see_scores">My Scores</a>
     </div>
 </form>
 </body>
